<resources>
    <string name="app_name">Klase</string>
    <string name="titulo_inicio">Profesores Particulares</string>
    <string name="registro">Registro</string>
    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="error">Usuario o contraseña incorrectas</string>
    <string name="nombre">Nombre completo</string>
    <string name="tel">Teléfono</string>
    <string name="galeria">Galeria</string>
    <string name="camara">Cámara</string>
    <string name="perfil">Foto de perfil del día</string>
    <string name="comenzar">comenzar</string>
    <string name="profes">PROFES</string>
    <string name="menu">Menú</string>
    <string name="perfilp">PERFIL DEL USUARIO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="asig">Asignaturas que puede impartir</string>
    <string name="curso">Cursos</string>
    <string name="idiom">Idiomas en que puede impartir clases</string>
    <string name="años">Años de experiencia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mate">Matemáticas</string>
    <string name="lengua">Lengua</string>
    <string name="ingles">Inglés</string>
    <string name="natura">Ciencias de la Naturaleza</string>
    <string name="sociales">Ciencias Sociales</string>
    <string name="primaria">Primaria</string>
    <string name="eso">E.S.O</string>
    <string name="bach">Bachiller</string>
    <string name="precio">Precio</string>
    <string name="fiki">Física y Química</string>
    <string name="tics">TICs</string>
    <string name="sig">Siguiente</string>
    <string name="repeContra">Repetir contraseña</string>
    <string name="profesor">Profesor</string>
    <string name="alumno">Alumno</string>
    <string name="rol">Usted se va a registrar como:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="barrio">Barrio</string>
    <string name="euskera">Euskera</string>
    <string name="apoyo">Apoyo Escolar</string>
    <string name="asignatura">Asignaturas</string>
    <string name="idiomas">Idiomas</string>
    <string name="cas">Castellano</string>
    <string name="exp">Años de experiencia</string>
    <string name="numhijos">Indica el número de hijos que tienes</string>
    <string name="puntual">Ocasional</string>
    <string name="continua">Continuas</string>
    <string name="presencial">Presencial</string>
    <string name="semanal">Semanal</string>
    <string name="mensual">Mensual</string>
    <string name="crearev">Crear Evento</string>
    <string name="descEvent">Descripción del evento</string>
    <string name="fecha">Fecha</string>
    <string name="addevent">Añadir Evento</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="borrarcuuenta">Eliminar cuenta</string>
    <string name="cambiaridioma">Cambiar idioma</string>
    <string name="ajustes">Ajustes</string>
    <string name="guardar">Guardar</string>
    <string name="contraAnti">Contraseña antigua</string>
    <string name="cambioContra">Cambiar contraseña</string>
    <string name="datosPer">Datos personales</string>
    <string name="miDir">Mi dirección</string>
    <string name="calle">Calle</string>
    <string name="opcional">(Opcional)</string>
    <string name="ocasional">Ocasional</string>
    <string name="tipoclase">Tipo de clase:</string>
    <string name="horaclase">Hora de la clase:</string>
    <string name="diaclase">Día de la calse:</string>
    <string name="duracion">Duración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comentario">Comentario</string>
    <string name="peticiones">Peticiones</string>
    <string name="aceptadas">Aceptadas</string>
    <string name="fav">Favoritos</string>
    <string name="pendientes">Pendientes</string>
    <string name="misresennas">Mis reseñas</string>
    <string name="mapa">Mapa</string>
    <string name="grafica">Estadísticas</string>
    <string name="filtrar">filtrar</string>
    <string name="horario">Horario</string>
    <string name="SolicitarKlase">Solicitar Klase</string>
    <string name="info">Información</string>
    <string name="resenas">Reseñas</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="de">de</string>
    <string name="a">a</string>
    <string name="escribirResena">Escribir una reseña</string>
    <string name="marchar">Sentimos mucho que te vayas.</string>
    <string name="cerrarses">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="eliminarcuenta">¿Estás seguro de que quieres eliminar tu cuenta?</string>
    <string name="norecuperarinfo">No podrás recuperar la información una vez eliminada la cuenta.</string>
    <string name="nocontacts">No hay contactos disponibles.</string>
    <string name="nopeti">No hay solicitudes disponibles.</string>
    <string name="filtrarAsig">Filtrar por asignatura.</string>
</resources>