<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titsettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/ajustes"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/cambiarDatosPer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/datosPer"
            android:textColor="@color/black"
            android:background="@drawable/redondo_back_light_10"/>
        <Button
            android:id="@+id/cambiarDire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/miDir"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/redondo_back_light_10"/>
        <Button
            android:id="@+id/cambiarIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cambiaridioma"
            android:textColor="@color/black"
            android:background="@drawable/redondo_back_light_10"/>
        <Button
            android:id="@+id/verreseñas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/misresennas"
            android:textColor="@color/black"
            android:background="@drawable/redondo_back_light_10"/>

        <Button
            android:id="@+id/vermapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/redondo_back_light_10"
            android:text="@string/mapa"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/vergraficas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grafica"
            android:textColor="@color/black"
            android:background="@drawable/redondo_back_light_10"/>
        <Button
            android:id="@+id/cerrarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cerrarsesion"
            android:textColor="@color/black"
            android:background="@drawable/redondo_back_light_10"/>
        <Button
            android:id="@+id/borrarcuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/rojo"
            android:text="@string/borrarcuuenta"
            android:background="@drawable/redondo_back_light_10"/>
    </LinearLayout>

</FrameLayout>